# agsyHOL

./: .gitignore  Check.hs  DLList.hs  GetFullProgName.hs  LICENSE  Lex.hs  Main.hs  Makefile  NarrowingSearch.hs  ParseGlue.hs  Parser.y  PrintProof.hs  ProofExport.hs  ProofExportTPTP.hs  README  SearchControl.hs  Syntax.hs  Transform.hs  Translate.hs  Undo.hs  agsyHOL.cabal
soundness/: DerivedProps.agda  DerivedProps.agdai  FSC.agda  FSC.agdai  HelpDefs.agda  HelpDefs.agdai  ProofUtilities.agda  ProofUtilities.agdai  STT.agda  STT.agdai  Soundness.agda  Soundness.agdai  StdLibStuff.agda  StdLibStuff.agdai  Syntax.agda  Syntax.agdai
src/: Check.hs  Lex.hs  Main.hs  NarrowingSearch.hs  ParseGlue.hs  Parser.hs  ProofExport.hs  Syntax.hs  TPTPSyntax.hs  Transform.hs  Translate.hs
