name:                agsyHOL
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Fredrik Lindblad 
maintainer:          fredrik.lindblad@chalmers.se
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md, README
cabal-version:       >=1.10

executable agsyHOL
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    UndecidableInstances, Rank2Types, ExistentialQuantification, MultiParamTypeClasses, FunctionalDependencies, FlexibleInstances, ScopedTypeVariables, FlexibleContexts, TypeSynonymInstances, ForeignFunctionInterface
  build-depends:       base >=4.8 && <4.9, process >=1.2 && <1.3, mtl >=2.2 && <2.3, array >=0.5 && <0.6, containers >=0.5 && <0.6
  hs-source-dirs:      src
  build-tools:         happy
  default-language:    Haskell2010
